# Robobo

./: .env  Dockerfile  pyrightconfig.json  robobo.code-workspace
.devcontainer/: devcontainer.json
.github/instructions/: instructions.md
CoppeliaSim/: bubbleRobClient  bubbleRobServer  bubbleRobZmqServer  coppeliaSim  coppeliaSim.sh  credits.txt  libIex-3_1.so.30.5.1  libIlmThread-3_1.so.30.5.1  libOpenEXR-3_1.so.30.5.1  libOpenMeshCore.so.7.1  libOpenMeshTools.so.7.1  libaec.so.0.1.2  libarmadillo.so.12  libavformat.so.58.76.100  libavutil.so.56.70.100  libblosc.so.1.21.5  libboost_filesystem.so.1.83.0  libboost_program_options.so.1.83.0  libboost_serialization.so.1.83.0  libcfitsio.so.10  libcharls.so.2.4.2  libdav1d.so.5.1.1  libdc1394.so.25.0.0  libdraco.so.8  libdraco.so.8.0.0  libfreexl.so.1  libgdal.so.34  libgdcmCommon.so.3.0  libgdcmDICT.so.3.0  libgdcmMSFF.so.3.0  libgdcmjpeg16.so.3.0  libgdcmjpeg8.so.3.0  libgeotiff.so.5  libgeotiff.so.5.2.1  libgz-utils2.so.2.0.0  libhdf5_serial.so.103  libhdf5_serial_hl.so.100  libheif.so.1.17.6  libicui18n.so.74.2  libicuuc.so.74.2  (+43 more)
CoppeliaSim/addOns/: Commander.lua  Convex decomposition coacd.py  Convex decomposition hacd.lua  Convex decomposition vhacd.lua  Convex hull.lua  (+4 more)
catkin_ws/src/learning_machines/: CMakeLists.txt
catkin_ws/src/learning_machines/scripts/: learning_robobo_controller.py  manual_control.py  task_zero.py
coppelia_env/: pyvenv.cfg
scripts/: .setup.bash.swm  .setup.bash.swn  .setup.bash.swo  entrypoint.bash  run.sh  run_routine.sh  setup.bash  source_dev.bash  source_env.bash
(+160 files in other folders)
